WIP: books page

--- a/internal/server/public/styles/site.css
+++ b/internal/server/public/styles/site.css
@@ -12,5 +12,6 @@
 @import url('file-explorer.css');
 @import url('calendar.css');
 @import url('photos.css');
+@import url('books.css');
 @import url('modals.css');
 @import url('utility.css');
