--- a/internal/server/ui/components/landing_nav/component.templ
+++ b/internal/server/ui/components/landing_nav/component.templ
@@ -11,6 +11,7 @@ templ Component() {
 			<a href="/files" class="landing-nav-link">Files</a>
 			<a href="/calendar" class="landing-nav-link">Calendar</a>
 			<a href="/photos" class="landing-nav-link">Photos</a>
+			<a href="/books" class="landing-nav-link">Books</a>
 		</div>
 		<div class="landing-nav-right">
 			<button class="landing-nav-button" onclick="alert('Settings coming soon')" title="Settings">
@@ -44,7 +45,6 @@ templ Component() {
 			</button>
 		</div>
 	</nav>
-	<!-- Mobile slide-out menu -->
 	<div id="mobile-menu" class="mobile-menu" onclick="if(event.target === this) this.classList.remove('mobile-menu--open')">
 		<div class="mobile-menu-content">
 			<div class="mobile-menu-header">
@@ -80,6 +80,12 @@ templ Component() {
 						<path d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
 					</svg>
 					<span>Photos</span>
+				</a>
+				<a href="/books" class="mobile-menu-link">
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" fill="currentColor" stroke="none">
+						<path d="M28.25 2c-0-0.69-0.56-1.25-1.25-1.25h-19.8c-0.028-0.001-0.061-0.001-0.093-0.001-1.817 0-3.297 1.443-3.357 3.246l-0 0.005v24.389c0.114 1.606 1.445 2.867 3.070 2.867 0.063 0 0.126-0.002 0.188-0.006l-0.009 0h20c0.69 0 1.25-0.56 1.25-1.25s-0.56-1.25-1.25-1.25v0h-19.8c-0.024 0.002-0.051 0.004-0.079 0.004-0.441 0-0.807-0.325-0.871-0.749l-0.001-0.005v-1.223c0-0.090 0.266-0.361 0.746-0.361l20.004 0.057c0 0 0 0 0.001 0 0.515 0 0.956-0.311 1.148-0.756l0.003-0.008 0.007-0.034c0.056-0.132 0.089-0.286 0.092-0.447v-0.001l-0-0.002 0-0.002zM25.75 23.969l-14.5-0.041v-20.678h14.5zM6.25 24v-20c0.064-0.429 0.43-0.754 0.871-0.754 0.028 0 0.055 0.001 0.082 0.004l-0.003-0h1.55v20.671l-1.75-0.005c-0.267 0.002-0.525 0.033-0.774 0.089l0.024-0.005zM14 8.25h9c0.69 0 1.25-0.56 1.25-1.25s-0.56-1.25-1.25-1.25v0h-9c-0.69 0-1.25 0.56-1.25 1.25s0.56 1.25 1.25 1.25v0zM23 9.75h-9c-0.69 0-1.25 0.56-1.25 1.25s0.56 1.25 1.25 1.25v0h9c0.69 0 1.25-0.56 1.25-1.25s-0.56-1.25-1.25-1.25v0z"></path>
+					</svg>
+					<span>Books</span>
 				</a>
 				<a href="/devices" class="mobile-menu-link">
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
