photos-update: Fix epub viewing
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/internal/server/ui/components/file_explorer/file_viewer/epub_viewer/component.templ
+++ b/internal/server/ui/components/file_explorer/file_viewer/epub_viewer/component.templ
@@ -53,14 +53,20 @@ templ Component(filePath string) {
             }
         };
         addEventListener('keydown', navigationListener);
-        fileViewerContent.focus();
+        if (fileViewerContent) {
+            fileViewerContent.focus();
+        }
         var displayed = rendition.display();
         if (displayed) {
             displayed.then(() => {}).catch((error) => {
-                fileViewerContent.innerHTML = `<p>Error loading book: ${error}</p>`;
+                if (fileViewerContent) {
+                    fileViewerContent.innerHTML = `<p>Error loading book: ${error}</p>`;
+                }
             });
         } else {
-            fileViewerContent.innerHTML = `<p>Error displaying book.</p>`;
+            if (fileViewerContent) {
+                fileViewerContent.innerHTML = `<p>Error displaying book.</p>`;
+            }
         }
 	</script>
 }
