--- a/internal/server/ui/views/files.templ
+++ b/internal/server/ui/views/files.templ
@@ -21,6 +21,7 @@ templ Files(pageState types.PageState) {
 			} else {
 				@file_explorer.Component(pageState, files, pageState.View)
 			}
+			<script src="/public/scripts/file_explorer.js?v=3"></script>
 		}
 	</html>
 }
