--- a/internal/server/ui/components/file_explorer/file_viewer/text_viewer/component.templ
+++ b/internal/server/ui/components/file_explorer/file_viewer/text_viewer/component.templ
@@ -22,7 +22,12 @@ templ Component(filePath string) {
 	if err != nil {
 		<p>Error reading file: { err.Error() }</p>
 	} else {
-		<div id="editor" style="width: 100%; height: 100%;">{ text }</div>
+		<div class="ab-text-editor-container">
+			<div class="ab-text-editor-header">
+				<span class="ab-text-editor-filename">{ filepath.Base(filePath) }</span>
+			</div>
+			<div id="editor" class="ab-text-editor">{ text }</div>
+		</div>
 		<script>
 			initializeTextEditor({{ filePath }});
 		</script>
