272: modal-fixes: Add toastr
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/internal/server/ui/components/header/component.templ
+++ b/internal/server/ui/components/header/component.templ
@@ -6,6 +6,7 @@ templ Component() {
 		<script src="/public/vendor/htmx/htmx.min.js"></script>
 		<script src="/public/scripts/pwa-init.js"></script>
 		<script src="/public/vendor/ace/ace.js"></script>
+		<script src="/public/vendor/toastr/toastr.min.js"></script>
 		<meta charset="UTF-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="theme-color" content="#4f46e5"/>
@@ -15,5 +16,6 @@ templ Component() {
 		<link rel="apple-touch-icon" href="/public/img/butler.png"/>
 		<link rel="manifest" href="/public/manifest.json"/>
 		<link rel="stylesheet" href="/public/styles/site.css" type="text/css"/>
+		<link rel="stylesheet" href="/public/vendor/toastr/toastr.min.css" type="text/css"/>
 	</head>
 }
