--- a/internal/server/ui/components/header/component.templ
+++ b/internal/server/ui/components/header/component.templ
@@ -6,7 +6,9 @@ templ Component() {
 		<script src="/public/vendor/htmx/htmx.min.js"></script>
 		<script src="/public/scripts/pwa-init.js"></script>
 		<script src="/public/vendor/ace/ace.js"></script>
-		<script src="/public/vendor/toastr/toastr.min.js"></script>
+		<script src="/public/vendor/jquery/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="></script>
+		<script src="/public/vendor/toastr/toastr.js"></script>
+		<script src="/public/scripts/toastr-init.js"></script>
 		<meta charset="UTF-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="theme-color" content="#4f46e5"/>
