--- a/internal/server/ui/components/calendar/monthView.templ
+++ b/internal/server/ui/components/calendar/monthView.templ
@@ -5,6 +5,8 @@ import "fmt"
 
 import "autobutler/pkg/calendar"
 import "autobutler/pkg/db"
+import "autobutler/internal/server/ui/components/icons/left_arrow"
+import "autobutler/internal/server/ui/components/icons/right_arrow"
 
 templ monthView(now time.Time) {
 	{{ monthInfo := calendar.NewMonthInfoFromTime(now) }}
@@ -23,9 +25,7 @@ templ monthView(now time.Time) {
 			hx-push-url={ fmt.Sprintf("/calendar?year=%d&month=%d", prevMonth.Year(), int(prevMonth.Month())) }
 			aria-label="Previous month"
 		>
-			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
-				<path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd"></path>
-			</svg>
+			@left_arrow.Component()
 		</button>
 		<h1 class="calendar-title">{ fmt.Sprintf("%s %d", now.Month(), now.Year()) }</h1>
 		<button
@@ -36,9 +36,7 @@ templ monthView(now time.Time) {
 			hx-push-url={ fmt.Sprintf("/calendar?year=%d&month=%d", nextMonth.Year(), int(nextMonth.Month())) }
 			aria-label="Next month"
 		>
-			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
-				<path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path>
-			</svg>
+			@right_arrow.Component()
 		</button>
 	</div>
 	<table class="calendar-table">
